# jaredlinutil

./: .gitignore  .shellcheckrc  Cargo.toml  README.md  build.sh  cross-build.sh  publish-instructions.md  start.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-reports.yml  config.yml  feature-requests.yml
.github/workflows/: linutil.yml  preview.yml  typos.yml
builds/: linutil-aarch64  linutil-armv7l
core/: Cargo.toml
core/src/: config.rs  inner.rs  lib.rs
core/tabs/: common-script.sh  common-service-script.sh  tabs.toml
core/tabs/applications-setup/: android-debloat.sh  docker-setup.sh  dwmtitus-setup.sh  fastfetch-setup.sh  linutil-installer.sh  linutil-updater.sh  mybash-setup.sh  podman-compose-setup.sh  podman-setup.sh  rofi-setup.sh  tab_data.toml  zsh-setup.sh
core/tabs/desktop-environments/: budgie-setup.sh  cinnamon-setup.sh  common-dm-script.sh  deepin-setup.sh  gnome-setup.sh  i3-setup.sh  kde-setup.sh  lxqt-setup.sh  mate-setup.sh  sway-setup.sh  tab_data.toml  xfce-setup.sh
core/tabs/security/: firewall-baselines.sh  firewalld-baselines.sh  iptables-baselines.sh  tab_data.toml  tailscale.sh  ufw-baselines.sh
core/tabs/system-setup/: alpine-edge.sh  cockpit-setup.sh  compile-setup.sh  gaming-setup.sh  global-theme.sh  remove-snaps.sh  system-cleanup.sh  system-update.sh  tab_data.toml  terminus-tty.sh  zig-setup.sh
core/tabs/utils/: add-ssh-key.sh  bluetooth-control.sh  create-bootable-usb.sh  encrypt_decrypt_tool.sh  ssh.sh  (+5 more)
tui/: Cargo.toml
tui/src/: cli.rs  main.rs  root.rs  state.rs  tips.rs
xtask/src/: docgen.rs  main.rs
(+40 files in other folders)
