[package]
name = "linutil_tui"
description = "Chris Titus Tech's Linux Toolbox - Linutil is a distro-agnostic toolbox designed to simplify everyday Linux tasks."
documentation = "https://christitustech.github.io/linutil"
readme = "../README.md"
edition = "2021"
license.workspace = true
repository = "https://github.com/ChrisTitusTech/linutil/tree/main/tui"
version.workspace = true
include = ["src/*.rs", "Cargo.toml", "cool_tips.txt", "../man/linutil.1"]

[features]
default = ["tips"]
tips = ["rand"]

[dependencies]
clap = { version = "4.5.37", features = ["derive", "std", "help", "usage"], default-features = false }
oneshot = { version = "0.1.11", features = ["std"], default-features = false }
portable-pty = "0.9.0"
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
tui-term = { version = "0.2.0", default-features = false }
time = { version = "0.3.41", features = ["formatting", "local-offset", "macros"], default-features = false }
unicode-width = { version = "0.2.0", default-features = false }
rand = { version = "0.9.1", optional = true }
linutil_core = { version = "2.9.2025", path = "../core" }
tree-sitter-highlight = "0.25.3"
tree-sitter-bash = "0.23.3"
nix = { version = "0.30.1", features = [ "user" ] }
vt100-ctt = "0.16.0"

[[bin]]
name = "linutil"
path = "src/main.rs"